; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch_7240.c_ar7240_hw_global_setup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch_7240.c_ar7240_hw_global_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arswitch_softc = type { i32 }

@AR8X16_REG_CPU_PORT = common dso_local global i32 0, align 4
@AR8X16_CPU_PORT_EN = common dso_local global i32 0, align 4
@AR8X16_CPU_MIRROR_DIS = common dso_local global i32 0, align 4
@AR8X16_REG_TAG_PRIO = common dso_local global i32 0, align 4
@AR8X16_REG_FLOOD_MASK = common dso_local global i32 0, align 4
@AR8X16_FLOOD_MASK_BCAST_TO_CPU = common dso_local global i32 0, align 4
@AR8X16_REG_GLOBAL_CTRL = common dso_local global i32 0, align 4
@AR7240_GLOBAL_CTRL_MTU_MASK = common dso_local global i32 0, align 4
@AR8X16_REG_SERVICE_TAG = common dso_local global i32 0, align 4
@AR8X16_SERVICE_TAG_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arswitch_softc*)* @ar7240_hw_global_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar7240_hw_global_setup(%struct.arswitch_softc* %0) #0 {
  %2 = alloca %struct.arswitch_softc*, align 8
  store %struct.arswitch_softc* %0, %struct.arswitch_softc** %2, align 8
  %3 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %4 = call i32 @ARSWITCH_LOCK(%struct.arswitch_softc* %3)
  %5 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %6 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @AR8X16_REG_CPU_PORT, align 4
  %9 = load i32, i32* @AR8X16_CPU_PORT_EN, align 4
  %10 = load i32, i32* @AR8X16_CPU_MIRROR_DIS, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @arswitch_writereg(i32 %7, i32 %8, i32 %11)
  %13 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %14 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @AR8X16_REG_TAG_PRIO, align 4
  %17 = call i32 @arswitch_writereg(i32 %15, i32 %16, i32 64080)
  %18 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %19 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @AR8X16_REG_FLOOD_MASK, align 4
  %22 = load i32, i32* @AR8X16_FLOOD_MASK_BCAST_TO_CPU, align 4
  %23 = or i32 %22, 4128831
  %24 = call i32 @arswitch_writereg(i32 %20, i32 %21, i32 %23)
  %25 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %26 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @AR8X16_REG_GLOBAL_CTRL, align 4
  %29 = load i32, i32* @AR7240_GLOBAL_CTRL_MTU_MASK, align 4
  %30 = load i32, i32* @AR7240_GLOBAL_CTRL_MTU_MASK, align 4
  %31 = call i32 @SM(i32 1536, i32 %30)
  %32 = call i32 @arswitch_modifyreg(i32 %27, i32 %28, i32 %29, i32 %31)
  %33 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %34 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @AR8X16_REG_SERVICE_TAG, align 4
  %37 = load i32, i32* @AR8X16_SERVICE_TAG_MASK, align 4
  %38 = call i32 @arswitch_modifyreg(i32 %35, i32 %36, i32 %37, i32 0)
  %39 = load %struct.arswitch_softc*, %struct.arswitch_softc** %2, align 8
  %40 = call i32 @ARSWITCH_UNLOCK(%struct.arswitch_softc* %39)
  ret i32 0
}

declare dso_local i32 @ARSWITCH_LOCK(%struct.arswitch_softc*) #1

declare dso_local i32 @arswitch_writereg(i32, i32, i32) #1

declare dso_local i32 @arswitch_modifyreg(i32, i32, i32, i32) #1

declare dso_local i32 @SM(i32, i32) #1

declare dso_local i32 @ARSWITCH_UNLOCK(%struct.arswitch_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
